--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Abdumalik's typing game</h1>
+    <div class="container">
+        <h1 class="title">Abdumalik's typing game</h1>
+        <p class="score">
+            <span class="score-counter">0</span>
+        </p>
 
+        <h3 class="random-word">...</h3>
 
+        <input class="text-input" type="text">
+
+    <p class="time-text">
+        Time:
+        <span class="time">0</span>
+    </p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
