--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Typing Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1 class="title">Abdumalik's typing game</h1>
-        <p class="score">
-            <span class="score-counter">0</span>
-        </p>
+      <h1>Abdumalik's typing game</h1>
 
-        <h3 class="random-word">...</h3>
+      <p class="score">
+        Score:
+        <span class="score-counter">0</span>
+      </p>
 
-        <input class="text-input" type="text">
+      <h3 class="random-word">...</h3>
 
-    <p class="time-text">
+      <input type="text" class="text-input" />
+
+      <p>
         Time:
-        <span class="time">0</span>
-    </p>
+        <span class="time">10</span>
+      </p>
     </div>
-    <script src="script.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
